--- a/src/components/server/package.json
+++ b/src/components/server/package.json
@@ -1,21 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "server.mjs",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.mjs"
+    "start": "node server.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "tesseract.js": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
